--- a/templates/administrar.html
+++ b/templates/administrar.html
@@ -13,38 +13,44 @@
         <a href="/" class="administrar-link">← Volver al Registro</a>
         <div class="separator"></div>
 
-        {% if registros %}
-        <table>
-            <thead>
-                <tr>
-                    <th>DNI</th>
-                    <th>Nombre</th>
-                    <th>Apellido</th>
-                    <th>Dirección</th>
-                    <th>Teléfono</th>
-                    <th>Acción</th>
-                </tr>
-            </thead>
-            <tbody>
-                {% for persona in registros %}
-                <tr>
-                    <td>{{ persona[1] }}</td>
-                    <td>{{ persona[2] }}</td>
-                    <td>{{ persona[3] }}</td>
-                    <td>{{ persona[4] }}</td>
-                    <td>{{ persona[5] }}</td>
-                    <td>
-                        <form action="/eliminar/{{ persona[0] }}" method="post" onsubmit="return confirm('¿Seguro que deseas eliminar este registro?');">
-                            <button type="submit" class="eliminar-btn">Eliminar</button>
-                        </form>
-                    </td>
-                </tr>
-                {% endfor %}
-            </tbody>
-        </table>
+        {% if personas %}
+        <form action="/eliminar" method="post" onsubmit="return confirm('¿Seguro que deseas eliminar los seleccionados?');">
+            <table>
+                <thead>
+                    <tr>
+                        <th><input type="checkbox" id="check-todos"></th>
+                        <th>DNI</th>
+                        <th>Nombre</th>
+                        <th>Apellido</th>
+                        <th>Dirección</th>
+                        <th>Teléfono</th>
+                    </tr>
+                </thead>
+                <tbody>
+                    {% for persona in personas %}
+                    <tr>
+                        <td><input type="checkbox" name="seleccion" value="{{ persona[0] }}"></td>
+                        <td>{{ persona[1] }}</td>
+                        <td>{{ persona[2] }}</td>
+                        <td>{{ persona[3] }}</td>
+                        <td>{{ persona[4] }}</td>
+                        <td>{{ persona[5] }}</td>
+                    </tr>
+                    {% endfor %}
+                </tbody>
+            </table>
+            <button type="submit" class="eliminar-btn">Eliminar Seleccionados</button>
+        </form>
         {% else %}
         <p>No hay registros disponibles.</p>
         {% endif %}
     </div>
+
+    <script>
+        document.getElementById('check-todos').addEventListener('click', function () {
+            const checkboxes = document.querySelectorAll('input[name="seleccion"]');
+            checkboxes.forEach(cb => cb.checked = this.checked);
+        });
+    </script>
 </body>
 </html>
