--- a/static/styles.css
+++ b/static/styles.css
@@ -38,6 +38,7 @@ input[type="text"] {
 button {
     background-color: #007bff;
     color: #fff;
+    margin: auto;
     border: none;
     padding: 10px 20px;
     border-radius: 5px;
@@ -123,6 +124,8 @@ h1 {
     padding: 8px 12px;
     border-radius: 5px;
     cursor: pointer;
+    margin: 5px auto;
+    display: block;
 }
 .eliminar-btn:hover {
     background-color: #c0392b;
