--- a/static/styles.css
+++ b/static/styles.css
@@ -38,7 +38,7 @@ input[type="text"] {
 button {
     background-color: #007bff;
     color: #fff;
-    margin: auto;
+    display: block;
     border: none;
     padding: 10px 20px;
     border-radius: 5px;
@@ -124,7 +124,8 @@ h1 {
     padding: 8px 12px;
     border-radius: 5px;
     cursor: pointer;
-    margin: 5px auto;
+    margin-top: 5px;
+    margin: auto;
     display: block;
 }
 .eliminar-btn:hover {
