--- a/templates/administrar.html
+++ b/templates/administrar.html
@@ -39,7 +39,9 @@
                     {% endfor %}
                 </tbody>
             </table>
-            <button type="submit" class="eliminar-btn">Eliminar Seleccionados</button>
+            <div class="boton-contenedor">
+                <button type="submit" class="eliminar-btn">Eliminar Registro Seleccionado/s</button>
+            </div>            
         </form>
         {% else %}
         <p>No hay registros disponibles.</p>
