--- a/templates/administrar.html
+++ b/templates/administrar.html
@@ -40,7 +40,7 @@
                 </tbody>
             </table>
             <div class="boton-contenedor">
-                <button type="submit" class="eliminar-btn">Eliminar Registro Seleccionado/s</button>
+                <button type="submit" class="eliminar-btn">Eliminar Registro/s Seleccionado/s</button>
             </div>            
         </form>
         {% else %}
