--- a/templates/index.html
+++ b/templates/index.html
@@ -33,7 +33,9 @@
                 <label for="telefono">Teléfono:</label>
                 <input type="text" id="telefono" name="telefono">
             </div>
-            <button type="submit" onclick="mostrarMensaje()">Registrar</button>
+            <div class="otro-boton">
+                <button type="submit" onclick="mostrarMensaje()">Registrar</button>
+            </div>
         </form>
     </div>
 
