--- a/static/styles.css
+++ b/static/styles.css
@@ -35,6 +35,10 @@ input[type="text"] {
     box-sizing: border-box;
 }
 
+.otro-boton {
+    text-align: center;
+}
+
 button {
     background-color: #007bff;
     color: #fff;
