--- a/static/styles.css
+++ b/static/styles.css
@@ -12,6 +12,7 @@ body {
     padding: 20px;
     border-radius: 5px;
     box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
+    overflow-x: auto;
 }
 
 h1 {
@@ -91,6 +92,7 @@ button:hover {
 table {
     width: 100%;
     border-collapse: collapse;
+    table-layout: fixed; /* Controla el ancho de las columnas */
 }
 
 table th, table td {
@@ -138,4 +140,44 @@ h1 {
 }
 .eliminar-btn:hover {
     background-color: #c0392b;
+}
+
+/* Estilos responsivos */
+@media (max-width: 768px) {
+    table, thead, tbody, th, td, tr {
+        display: block;
+        width: 100%;
+    }
+
+    thead tr {
+        display: none;
+    }
+
+    tr {
+        margin-bottom: 15px;
+        border: 1px solid #ddd;
+        border-radius: 5px;
+        padding: 10px;
+        background-color: #fff;
+    }
+
+    td {
+        text-align: right;
+        padding-left: 50%;
+        position: relative;
+    }
+
+    td::before {
+        content: attr(data-label);
+        position: absolute;
+        left: 10px;
+        width: 45%;
+        padding-left: 10px;
+        font-weight: bold;
+        text-align: left;
+    }
+
+    .eliminar-btn {
+        width: 100%;
+    }
 }
